--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
-* {box-sizing: content-box;
+* { box-sizing: content-box;
     margin: 0px;
     padding: 0px;
 }
 
-.header-img {
+/*.header-img {
     transform: translate(130%, -10%);
     position: relative;
 } 
@@ -29,4 +29,119 @@
     margin: 0px;
     width: 100%;
     position:absolute;
-} 
+}*/
+
+body {
+  margin: 0px;
+  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #5a5c5e;
+  color: white;
+}
+
+h2 {
+  text-align: center;
+  justify-content: center;
+  font-size: 60px;
+}
+
+.header-buscador {
+  position: initial;
+  margin-left: 1590px;
+  display: initial;
+}
+
+.header-menu {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 20px 0px;
+  width: 1920px;
+  margin: 0;
+}
+
+.header-img {
+  position: absolute;
+  display: flex;
+  margin-left: 760px;
+}
+
+.btn-filrar {
+  position: relative;
+  background-color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+  width: 100px;
+  margin-top: 30px;
+  margin-left: 1532px;
+}
+
+.btn-ordenar {
+  position: relative;
+  background-color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+  width: 140px;
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.characterBox {
+  display: flex;
+  text-align: center;
+  width: 290px;
+  height: 390px;
+  color: black;
+  font-size: 25px;
+  background-color: #a4a4a4;
+  border-radius: 20px;
+  margin: 20px;
+  padding: 20px;
+  flex-direction: row;
+}
+
+#books {
+  font-size: 25px;
+  margin-left: 20px;
+}
+
+#spells {
+  margin-left: 55px;
+  font-size: 25px;
+}
+
+#potions {
+  margin-left: 55px;
+  font-size: 25px;
+}
+
+#study-house {
+  margin-left: 460px;
+  font-size: 25px;
+}
+
+#funfacts {
+  margin-left: 55px;
+  font-size: 25px;
+}
+
+#imgPrincipal {
+  width: 1920px;
+  margin-top: 40px;
+}
+
+#background-img {
+  position: absolute;
+}
+
+#temp-characters {
+  position: relative;
+  background-image: url(./img/fondo1.png);
+  font-size: 15px;
+}*/
+
+
