agrega estilos para ventana responsive

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,23 @@
-* {box-sizing: content-box;
+@media (max-width: 768px) {
+
+    /* For mobile phones: */
+    [class*="col-"] {
+    width: 100%;
+    }
+}
+
+* {
+    box-sizing: content-box;
     margin: 0px;
     padding: 0px;
 }
 
+
+
 .header-img {
     transform: translate(130%, -10%);
     position: relative;
-} 
+}
 
 .header-menu {
     text-transform: uppercase;
@@ -17,8 +28,8 @@
     margin: 0;
     background: rgb(90, 92, 94);
     transform: translate(0%, -330%);
-    position:relative;
-} 
+    position: relative;
+}
 
 .header-buscador {
     transform: translate(80%, -1405%);
@@ -28,5 +39,5 @@
     transform: translate(0%, -65%);
     margin: 0px;
     width: 100%;
-    position:absolute;
-} 
+    position: absolute;
+}
