--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,7 @@ h2 {
   margin-left: 1467px;
   height: 30px;
   width: 161px;
-  border: white;
+  border: none;
   font-size: 17px;
   padding-left: 5px;
   border-radius: 10px;
@@ -106,7 +106,7 @@ h2 {
   background-color: #faba13;
 }
 
-.characterBox {
+.cards {
   height: 281px;
   width: 252px;
   background-color: #a4a4a4;
@@ -118,10 +118,15 @@ h2 {
   justify-content: center;
 font-size: 20px;
 }
-.characterBox:hover {
+.cards:hover {
   background-color: #faba13;
 }
 
+.btn-filtrar-element{
+  border: none;
+  background-color: white;
+
+}
 #imgPrincipal {
   margin-top: 56px;
   position: absolute;
