--- a/src/style.css
+++ b/src/style.css
@@ -4,27 +4,31 @@
   margin: 0;
 }
 nav {
+  position: relative;
   height: 60px;
   width: 100%;
-  margin-top: -1px;
+  margin-top: -599px;
+}
+main {
+  background-image: url(img/fondo1.png);
+  margin-top: 441px;
+  padding-top: 10px;
+  width: 1920px;
 }
 
 section {
-  background-image: url(img/fondo1.png);
-  margin-top: 450px;
-  padding-top: 0.05px;
+  position: relative;
 }
+
 h2 {
   color: white;
   margin-left: 34px;
 }
 
-
-
 .header-img {
   position: fixed;
   text-align: center;
-  margin-top: -2px;
+  margin-top: -600px;
   width: 100%;
 }
 
@@ -115,23 +119,23 @@ h2 {
   border-radius: 20px;
   text-align: center;
   padding-top: 10px;
-  margin: 65px 32px;
+  margin: 65px 30px;
   display: inline-grid;
   justify-content: center;
-font-size: 20px;
+  font-size: 18px;
 }
 .cards:hover {
   background-color: #faba13;
 }
 
-.btn-filtrar-element{
+.btn-filtrar-element {
   border: none;
   background-color: white;
-
 }
+
 #imgPrincipal {
   margin-top: 56px;
-  position: absolute;
+  position: relative;
 }
 
 #books {
@@ -169,5 +173,206 @@ font-size: 20px;
   background-image: url(./img/fondo1.png);
 }
 
-@media screen {
+
+@media screen and (min-width: 1366px) and (max-width: 1919px) {
+  #imgPrincipal {
+    object-fit: cover;
+    width: 1349px;
+  }
+
+  .header-img {
+    position: fixed;
+    margin-top: 0px;
+    object-fit: cover;
+    width: 1353px;
+    height: 148px;
+    margin-left: -1350px;
+  }
+
+  nav {
+    position: relative;
+    height: 60px;
+    width: 100%;
+    margin-top: -437px;
+  }
+
+  #books {
+    margin-left: 34px;
+    margin-top: 15px;
+    font-size: 18px;
+  }
+
+  #spells {
+    margin-left: 128px;
+    margin-top: 15px;
+    font-size: 18px;
+  }
+
+  #potions {
+    margin-left: 250px;
+    margin-top: 15px;
+    font-size: 18px;
+  }
+
+  #funfacts {
+    margin-left: 378px;
+    margin-top: 15px;
+    font-size: 18px;
+  }
+
+  #study-house {
+    margin-left: 826px;
+    margin-top: 15px;
+    font-size: 18px;
+  }
+
+  .input-buscar {
+    margin-top: -47px;
+    margin-left: 1029px;
+    height: 30px;
+    width: 285px;
+    border: white;
+    font-size: 15px;
+    padding-left: 16px;
+    border-radius: 10px;
+    position: fixed;
+    box-shadow: 5px 5px 5px #272727;
+  }
+
+  main {
+    background-image: url(img/fondo1.png);
+    margin-top: 267px;
+    padding-top: 10px;
+    width: 1349px;
+  }
+
+  .btn-filtrar {
+    margin-top: 132px;
+    margin-left: 959px;
+    height: 30px;
+    width: 161px;
+    border: none;
+    font-size: 15px;
+    padding-left: 5px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #272727;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    padding-top: 2px;
+  }
+
+  .btn-ordenar {
+    margin-top: -30px;
+    margin-left: 1152px;
+    height: 30px;
+    width: 161px;
+    border: white;
+    font-size: 15px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #272727;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    padding: 2px;
+  }
+
+  .cards {
+    height: 281px;
+    width: 252px;
+    background-color: #a4a4a4;
+    border-radius: 20px;
+    text-align: center;
+    padding-top: 12px;
+    margin: 45px 40px;
+    display: inline-grid;
+    justify-content: center;
+    font-size: 18px;
+  }
+
+  .btn-filtrar-element {
+    font-size: 15px;
+  }
+}
+
+
+@media screen and (max-width: 390px) {
+  .header-img {
+    position: fixed;
+    margin-top: 0px;
+    object-fit: cover;
+    width: 390px;
+    height: 91px;
+    margin-left: -390px;
+  }
+  #imgPrincipal {
+    margin-top: 32px;
+    object-fit: cover;
+    width: 390px;
+    height: 169px;
+  }
+
+  .btn-filtrar {
+    margin-top: 131px;
+    margin-left: 19px;
+    height: 30px;
+    width: 161px;
+    border: none;
+    font-size: 17px;
+    padding-left: 5px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #272727;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    padding-top: 2px;
+  }
+
+  .btn-ordenar {
+    margin-top: -30px;
+    margin-left: 196px;
+    height: 30px;
+    width: 161px;
+    border: white;
+    font-size: 17px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #272727;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    padding: 2px;
+  }
+
+  h2 {
+    color: white;
+    margin-left: 108px;
+    margin-top: 28px;
+  }
+
+  main {
+    background-image: url(img/fondo390.png);
+    margin-top: 89px;
+    padding-top: 10px;
+    width: 390px;
+  }
+
+  .imgCharacter {
+    height: 129px;
+  }
+
+  .cards {
+    height: 186px;
+    width: 155px;
+    background-color: #a4a4a4;
+    border-radius: 20px;
+    text-align: center;
+    padding-top: 10px;
+    margin: 16px 18px;
+    display: inline-grid;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .btn-filtrar-element {
+    font-size: 12px;
+  }
 }
