--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
   margin: 0;
 }
 nav {
+  display: block;
   position: relative;
   height: 60px;
   width: 100%;
@@ -25,11 +26,29 @@ h2 {
   margin-left: 34px;
 }
 
-.header-img {
+#header-img {
   position: fixed;
   text-align: center;
   margin-top: -600px;
   width: 100%;
+}
+
+#calc {
+  margin-top: 90px;
+  margin-bottom: 90px;
+  margin-left: 780px;
+  height: 58px;
+  width: 370px;
+  border: white;
+  font-size: 25px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #272727;
+  font-weight: bold;
+}
+
+#calc:hover {
+  background-color: #faba13;
 }
 
 .header-menu {
@@ -128,6 +147,54 @@ h2 {
   background-color: #faba13;
 }
 
+.covercards {
+  height: 434px;
+  width: 283px;
+  text-align: center;
+  background-color: #a4a4a4;
+  margin: 46px 91px;
+  display: inline-grid;
+  justify-content: center;
+  font-size: 18px;
+  border-radius: 20px;
+}
+
+.covercards:hover {
+  background-color: #faba13;
+}
+
+.bookCover {
+  height: 314px;
+  margin-left: 35px;
+  margin-top: 35px;
+}
+
+.factscards {
+  width: 900px;
+  height: 450px;
+  text-align: center;
+  background-color: #a4a4a4;
+  margin: 46px 496px;
+  display: inline-grid;
+  justify-content: center;
+  font-size: 18px;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.factscards:hover {
+  background-color: #faba13;
+}
+
+.typeFunFact {
+}
+
+.imgFact {
+  height: 250px;
+  margin: auto;
+  border-radius: 10px;
+}
+
 .btn-filtrar-element {
   border: none;
   background-color: white;
@@ -172,7 +239,6 @@ h2 {
   position: relative;
   background-image: url(./img/fondo1.png);
 }
-
 
 @media screen and (min-width: 1366px) and (max-width: 1919px) {
   #imgPrincipal {
@@ -294,7 +360,6 @@ h2 {
     font-size: 15px;
   }
 }
-
 
 @media screen and (max-width: 390px) {
   .header-img {
